fix: hide x axis overflow and prevent y axis clipping

--- a/src/styles/elements.scss
+++ b/src/styles/elements.scss
@@ -1,3 +1,9 @@
-@import "./config/breakpoints.scss";
-@import "./config/colour.scss";
-@import "./config/fonts.scss";
+/**
+ * base global html element styling
+ */
+
+body {
+  overflow-x: hidden;
+  /* wont matter in the long run but with minimal content the body cuts the content in half */
+  min-height: 100vh;
+}
